completed aside bar successfully

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
     <meta name="description" content="A Live Coronavirus Tracker " />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/segment.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/divider.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
